--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.scss">
 </head>
 <body>
-  <div class="container-flex m-0px">
+  <div class="container-fluid m-0px">
     <div class="row">
       <div class="col-12">
         <header class="bg-white border border-danger">
