--- a/index.html
+++ b/index.html
@@ -28,32 +28,33 @@
         </div>
       </div>
     </div>
-    <div class="Navegador-Dos row">
-      <div class="col-12 ">
-        <nav class="nav d-flex justify-content-center">
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">HOME</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">CORONAVIRUS BLOG</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">POPULAR</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">ONEZERO</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">ELEMENTAL</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">GEN</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">ZORA</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">FORGE</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">HUMAN PARTS</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">MAKER</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">LEVEL</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">HEATED</a>
-          <a class="p-2 text-decoration-none" style="color: black;" href="#">MORE</a>
-        </nav>
-      </div>
+  </div>
+
+  <div class="row ">
+    <div class="col-12 sticky-top">
+      <nav class="nav d-flex justify-content-center ">
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">HOME</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">CORONAVIRUS BLOG</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">POPULAR</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">ONEZERO</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">ELEMENTAL</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">GEN</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">ZORA</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">FORGE</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">HUMAN PARTS</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">MAKER</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">LEVEL</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">HEATED</a>
+        <a class="p-2 text-decoration-none" style="color: black;" href="#">MORE</a>
+      </nav>
     </div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container" style="margin-bottom: 10px; margin-top: 15px;">
     <div class="row">
       <div class="col-12 col-md-4">
 
-        <div class="card">
+        <div class="card" style="border: 0px; padding-right: 25px;">
           <img src="imagenes/i refuse.jpeg" class="card-img-top" alt="i refuse">
           <div class="card-body">
             <h5 class="card-title"
@@ -65,7 +66,7 @@
             <a style="color: black;" class="ds-link ds-link--styleSubtle postMetaInline postMetaInline--author"
               data-action-type="hover" dir="auto" href="...">Devin Price</a> "in" <a style="color: black;"
               class="ds-link ds-link--styleSubtle" data-action-type="hover" href="...">GEN</a>
-            <p class="card-text"><small class="text-muted">May 22 . 4 min read</small></p>
+            <p class="card-text"><small class="text-muted">May 22 . 4 min read ★</small></p>
           </div>
         </div>
       </div>
@@ -137,7 +138,7 @@
 
       </div>
       <div class="col-12 col-md-4">
-        <div class="card">
+        <div class="card" style="border: 0px;">
           <img src="imagenes/whatever.jpeg" class="card-img-top" alt="i refuse">
           <div class="card-body">
             <h5 class="card-title"
@@ -149,7 +150,7 @@
             <a style="color: black;" class="ds-link ds-link--styleSubtle postMetaInline postMetaInline--author"
               data-action-type="hover" dir="auto" href="...">Devin Price</a> "in" <a style="color: black;"
               class="ds-link ds-link--styleSubtle" data-action-type="hover" href="...">GEN</a>
-            <p class="card-text"><small class="text-muted">May 22 . 4 min read</small></p>
+            <p class="card-text"><small class="text-muted">May 22 . 4 min read ★</small></p>
           </div>
         </div>
       </div>
@@ -157,14 +158,14 @@
   </div>
 
   <!-- INICIO DE CONTAINER -->
-
+<hr>
 
   <!-- seccion de articulos -->
   <div class="row mx-5">
 
     <div class="row mx-5">
-      <div class="col-12 col-lg-8">
-        <div class="card">
+      <div class="col-12 col-lg-8 col">
+        <div class="card" style="border: 0px;">
           <div class="card-body">
             <h5 class="card-title">A new way to control your experience</h5>
             <p class="card-text">Hide content from authors or publications on your Medium homepage and in emails by
@@ -212,6 +213,7 @@
               <div class="col-8 col-lg-8">
                 <div class="card-body pt-1">
                   <p class="card-text"><small class="text-muted">POPULAR ON MEDIUM</small></p>
+                  
                   <h5 class="card-title ">Every Covid-19 Symptom We Know About Right Now</h5>
                   <p class="card-text text-muted">The most perplexing things about a disease that has proved vexing.</p>
                   <div class="row">
@@ -328,18 +330,21 @@
         <!-- contenedor para secciones final-->
       </div>
       <div class="col-12 col-lg-4">
-        <aside>
+        <aside class="Navbar sticky-top">
           <h1
             style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 20px;">
             Popular on medium</h1>
+            <hr>
           <article class="col-12 row">
             <div class="col-md-3">01</div>
             <div class="col-md-9">
               <h2
                 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 20px;"
                 class="mb-0">Every Type of Zoom Call Participant, Illustrated by Cats</h3>
-                <a href="#" class="stretched-link d-inline-block">Jack Shepherd</a><span>in</span><a
-                  href="#">Tenderly</a></a>
+                <a href="..." style="color: black;"
+                class="ds-link ds-link--styleSubtle" data-action-type="hover">Jack Shepherd</a> "in" <a
+                  href="..." style="color: black;"
+                  class="ds-link ds-link--styleSubtle" data-action-type="hover">Tenderly</a>
                 <div class="mb-1 text-muted">May 18 24 min read ⋆ </div>
             </div>
           </article>
@@ -351,8 +356,10 @@
               <h2
                 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 20px;"
                 class="mb-0">We Cannot Return to Campus This Fal</h3>
-                <a href="#" class="stretched-link d-inline-block">Harley Litzelman</a><span>in</span><a
-                  href="#">Tenderly</a></a>
+                <a href="..." style="color: black;"
+                class="ds-link ds-link--styleSubtle" data-action-type="hover">Harley Litzelman</a>"in"<a
+                  href="..." style="color: black;"
+                  class="ds-link ds-link--styleSubtle" data-action-type="hover">Tenderly</a>
                 <div class="mb-1 text-muted">May 19 27 min read ⋆ </div>
             </div>
           </article>
@@ -363,8 +370,8 @@
               <h2
                 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 20px;"
                 class="mb-0">Content Used to Be King. Here’s What’s Next</h3>
-                <a href="#" class="stretched-link d-inline-block">Dave Schools</a><span>in</span><a
-                  href="#">Tenderly</a></a>
+                <a href="..." style="color: black;" class="ds-link ds-link--styleSubtle" data-action-type="hover">Dave Schools</a>"in"<a
+                  href="..."  style="color: black;" class="ds-link ds-link--styleSubtle" data-action-type="hover">Tenderly</a>
                 <div class="mb-1 text-muted">May 18 24 min read ⋆ </div>
             </div>
           </article>
@@ -375,16 +382,17 @@
               <h2
                 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-size: 20px;"
                 class="mb-0">Stealing Secrets from Developers using Websockets</h3>
-                <a href="#" class="stretched-link d-inline-block">Sergey Faldin </a><span>in</span><a href="#">in The
-                  Ascent</a></a>
+                <a href="..." style="color: black;"
+                class="ds-link ds-link--styleSubtle" data-action-type="hover">Sergey Faldin </a>"in"<a href="..." style="color: black;"
+                class="ds-link ds-link--styleSubtle" data-action-type="hover">The
+                  Ascent</a>
                 <div
                   style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;;"
                   class="mb-1 text-muted">May 18 24 min read ⋆ </div>
             </div>
           </article>
-        </aside>
-        <footer>
-          <div class="nav-scroller py-1 mb-2">
+
+          <div class="nav-scroller py-1 mb-2 sticky-top">
             <nav class="nav d-flex justify-content-center">
               <a class="p-2 text-muted" href="#">Help</a>
               <a class="p-2 text-muted" href="#">Status</a>
@@ -396,8 +404,8 @@
               <a class="p-2 text-muted" href="#">About</a>
             </nav>
           </div>
-
-        </footer>
+        </aside>
+  
       </div>
     </div>
 
