--- a/index2.html
+++ b/index2.html
@@ -50,17 +50,19 @@
         </div>
       
     
-  <div class="container">
+  <div class="container" style="margin-top: 15px;">
     <div class="row">
-      <!--Superior izquierda-->
+      <!--Superior izquierda 
+      porfa no ka toquen ya la volvia modificar-->
       <div class="col-12 col-md-4">
         <div class="card mb-5" style="border: 0px;">
           <img src="https://cdn-images-1.medium.com/focal/416/151/58/33/1*bAJmoGlAAbzAW1D2uR_8fw.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Your Very Detailed Guide to Safely Staying in a Rental House</h5>
-            <p class="card-text text-muted">Albert Einstein has been one of the most celebrated scientists of all time. It is funny, that his ideas are also, among the most difficult to understand, and many people do not quite know what he did, and how he did all those things. It is the mystery of not knowing how the mind of a scientist works</p>
+            <p class="card-text text-muted">Albert Einstein has been one of the most celebrated scientists of all time. </p>
             <a style="color: black;" class="ds-link ds-link--styleSubtle postMetaInline postMetaInline--author"
-            data-action-type="hover" dir="auto" href="...">Cortney Clift in Elemental</a>
+            data-action-type="hover" dir="auto" href="...">Cortney Clift</a> in <a style="color: black;" class="ds-link ds-link--styleSubtle postMetaInline postMetaInline--author"
+            data-action-type="hover" dir="auto" href="...">Elemental</a>
             <p class="card-text"><small class="text-muted">May 24 • 14 min read ★</small></p>
           </div>
         </div>
@@ -75,12 +77,10 @@
             </div>
             <div class="col-md-8 col-8">
               <div class="card-body" style="font-size: 12px; padding-top:0px; padding-bottom: 0;">
-                <h5 class="card-title" style="font-size: 16px; margin-top:0px; padding-top: 0px; margin-bottom: 35px;">How the JFK Assassination Bullets Were Digitally Preserved at NIST</h5>
-                <p class="card-text" style="margin-bottom: 0px;">National Institute of Standards</p>
+                <h5 class="card-title" style="font-size: 16px; margin-top:0px; padding-top: 0px; margin-bottom: 8px;"> How the JFK Assassination Bullets Were Digitally Preserved at NIST</h5>
                 <a href="..." style="color: black;"
-                  class="ds-link ds-link--styleSubtle" data-action-type="hover">Cortney Clift</a>"in"<a href="..." style="color: black;"
-                  class="ds-link ds-link--styleSubtle" data-action-type="hover">>Elemental</da>
-                <p class="card-text"><small class="text-muted">May 6 · 8 min read</small></p>
+                  class="ds-link ds-link--styleSubtle" data-action-type="hover">National Institute of Standards</a>
+                <p class="card-text"><small class="text-muted">May 6 · 8 min read ★</small></p>
               </div>
             </div>
           </div>
@@ -93,9 +93,10 @@
           </div>
           <div class="col-md-8 col-8">
             <div class="card-body" style="font-size: 12px; padding-top:0px ;padding-bottom: 0; ">
-              <h5 class="card-title" style="font-size: 16px; margin-top:0px; padding-top: 0px; margin-bottom: 35px;">How the JFK Assassination Bullets Were Digitally Preserved at NIST</h5>
-              <p class="card-text" style="margin-bottom: 0px;">National Institute of Standards</p>
-              <p class="card-text"><small class="text-muted">May 6 · 8 min read</small></p>
+              <h5 class="card-title" style="font-size: 16px; margin-top:0px; padding-top: 0px; margin-bottom: 8px;">How the JFK Assassination Bullets Were Digitally Preserved at NIST</h5>
+              <a href="..." style="color: black;"
+                  class="ds-link ds-link--styleSubtle" data-action-type="hover">National Institute of Standards</a>
+              <p class="card-text"><small class="text-muted">May 6 · 8 min read ★</small></p>
             </div>
           </div>
         </div>
@@ -108,9 +109,10 @@
             </div>
             <div class="col-md-8 col-8">
               <div class="card-body" style="font-size: 12px; padding-top:0px ;">
-                <h5 class="card-title" style="font-size: 16px; margin-top:0px; padding-top: 0px; margin-bottom: 35px;">How the JFK Assassination Bullets Were Digitally Preserved at NIST</h5>
-                <p class="card-text" style="margin-bottom: 0px;">National Institute of Standards</p>
-                <p class="card-text"><small class="text-muted">May 6 · 8 min read</small></p>
+                <h5 class="card-title" style="font-size: 16px; margin-top:0px; padding-top: 0px; margin-bottom: 8px;">How the JFK Assassination Bullets Were Digitally Preserved at NIST</h5>
+                <a href="..." style="color: black;"
+                  class="ds-link ds-link--styleSubtle" data-action-type="hover">National Institute of Standards</a>
+                <p class="card-text"><small class="text-muted">May 6 · 8 min read ★</small></p>
               </div>
             </div>
           </div>
@@ -123,9 +125,10 @@
         <img src="https://cdn-images-1.medium.com/fit/c/504/222/1*jT7HZCkP7mto3ys-SniC1w.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">A Practical Guide To Making A Scientific Breakthrough</h5>
-          <p class="card-text text-muted">Albert Einstein has been one of the most celebrated How he did all those things.one of the most c scientists of all time.How he did all those things. It is the mystery of not knowing how the mind of a scientist works</p>
+          <p class="card-text text-muted">Albert Einstein has been one of the most celebrated scientists of all time.</p>
           <a style="color: black;" class="ds-link ds-link--styleSubtle postMetaInline postMetaInline--author"
-          data-action-type="hover" dir="auto" href="...">Cortney Clift in Elemental</a>
+          data-action-type="hover" dir="auto" href="...">Cortney Clift</a> in <a style="color: black;" class="ds-link ds-link--styleSubtle postMetaInline postMetaInline--author"
+          data-action-type="hover" dir="auto" href="..."> Elemental</a>
           <p class="card-text"><small class="text-muted">May 24 • 14 min read ★</small></p>
         </div>
       </div>
